<resources>
    <!--FACEBOOK-->
    <string name="facebook_app_id">1814667795441968</string>
    <string name="app_name">Buscagro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="Text_NovoNoBuscaagro">Novo no Buscaagro?</string>
    <string name="Text_CrieUmaCC">Novo no Buscagro, crie uma conta!</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="button_Entrar">Entrar</string>
    <string name="textView_EsqcSenha">Esqueceu sua Senha?</string>
    <string name="hint_Senha">Senha</string>
    <string name="hint_LoginEmail">Email</string>
    <string name="hint_Senha2x">Repita a Senha</string>
    <string name="text_PretendeUsar">Como pretende usar o Buscagro?</string>
    <string name="hint_Endereco">Endereço</string>
    <string name="hint_NomeCompleto">Nome Completo</string>
    <string name="hint_Email">E-mail</string>
    <string name="hint_ExTelefone">(00) 00000-0000</string>
    <string name="text_Produtor">Produtor</string>
    <string name="text_Consumidor">Consumidor</string>
    <string name="text_Ambos">Os dois</string>
    <string name="text_Cadastrar">Cadastrar</string>
    <string name="text_Cancelar">Cancelar</string>

    <string-array name="tabs">
        <item>Produtor</item>
        <item>Consumidor</item>
    </string-array>
    <string-array name="tab_oferta_demanda">
        <item>Oferta</item>
        <item>Demanda</item>
    </string-array>

    <string name="title_activity_principal"> </string>
    <string name="title_activity_home_produtor">HomeProdutorActivity</string>
    <string name="title_activity_editar_cadastro">EditarCadastroActivity</string>
    <string name="text_or">OU</string>
    <string name="title_activity_decider_main">DeciderMainActivity</string>
    <string name="title_activity_main">main</string>
    <string name="title_activity_tela_inicial">TelaInicialActivity</string>
    <string name="title_activity_tela_cadastro">TelaCadastroActivity</string>
    <string name="title_activity_tela_consulta">TelaConsultaActivity</string>
    <string name="title_activity_tela_cancelamento">TelaCancelamentoActivity</string>
    <string name="cadastrar_oferta">Cadastrar Oferta</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="quantidade_do_produto">Quantidade do Produto</string>
    <string name="validade_da">Validade da</string>
    <string name="fragment_string_consultar">Consultar</string>
    <string name="fragment_string_cadastrar">Cadastrar</string>
    <string name="fragment_string_cancelar">Cancelar</string>
    <string name="fb_login_protocol_scheme">fb1814667795441968</string>

</resources>
