<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryCleared">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:background="@color/colorWhiteMax"
        android:paddingBottom="58dp"
        android:paddingTop="58dp">

        <TextView
            android:id="@+id/fragment_cadastrar_txtview_cadastar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/fragment_string_cadastrar"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/fragment_cadastrar_editText_nome_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="248"

            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fragment_cadastrar_txtview_cadastar"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="58dp"
            android:hint="@string/nome_do_produto"
            android:inputType="text" />

        <EditText
            android:id="@+id/fragment_cadastrar_editText_qntd_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:maxLength="9"

            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fragment_cadastrar_editText_nome_produto"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/quantidade_do_produto"
            android:inputType="number"/>


        <TextView
            android:id="@+id/fragment_cadastrar_textView_validade_da"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/fragment_cadastrar_editText_qntd_produto"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/validade_da" />

        <SeekBar
            android:id="@+id/fragment_cadastrar_seekbar_validade_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/fragment_cadastrar_textView_validade_da"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:max="7" />

        <Button
            android:id="@+id/fragment_cadastrar_button_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/fragment_cadastrar_seekbar_validade_produto"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_Cadastrar"
            android:textColor="@color/colorWhiteMax" />
    </RelativeLayout>

</ScrollView>