<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    android:fillViewport="true"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/RelativeLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:src="@mipmap/ic_logo2" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/main_FB_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:paddingBottom="10dp"
            android:paddingLeft="26dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/textView_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_FB_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/text_or"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhiteMax" />

        <EditText
            android:id="@+id/mainlogin_editText_email"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_or"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/botao_redondo"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_LoginEmail"
            android:inputType="textPersonName"
            android:paddingLeft="60dp"
            android:textColor="@color/colorWhiteMax"
            android:textColorHint="@color/colorWhiteMax" />

        <EditText
            android:id="@+id/editText_Senha"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mainlogin_editText_email"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/botao_redondo"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_Senha"
            android:inputType="textPassword"
            android:paddingLeft="60dp"
            android:textColor="@color/colorWhiteMax"
            android:textColorHint="@color/colorWhiteMax" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4"
            android:layout_below="@+id/editText_Senha"
            android:background="@color/colorGrayTransparent"
            android:onClick="onClickEntrar"
            android:text="@string/button_Entrar"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView_EsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:layout_below="@+id/button"
            android:layout_marginTop="8dp"
            android:paddingLeft="2dp"
            android:text="@string/textView_EsqcSenha"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorNewACC"
            android:onClick="onClickCadastro"
            android:text="@string/Text_CrieUmaCC"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_alignLeft="@+id/mainlogin_editText_email"
            android:layout_alignStart="@+id/mainlogin_editText_email"
            android:layout_alignTop="@+id/mainlogin_editText_email"
            android:src="@drawable/ic_user_name" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_alignLeft="@+id/editText_Senha"
            android:layout_alignStart="@+id/editText_Senha"
            android:layout_alignTop="@+id/editText_Senha"
            android:src="@drawable/ic_action_senha" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button2"
            android:src="@drawable/ic_keyboard_arrow_right_white_48dp" />

    </RelativeLayout>
</ScrollView>