<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryCleared">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/caixa_consulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorWhiteMax"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/fragment_consultar_txtview_consultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/fragment_string_consultar"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/fragment_consultar_editText_nome_produto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="248"

                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/fragment_consultar_txtview_consultar"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/nome_do_produto" />

            <EditText
                android:id="@+id/fragment_consultar_editText_qntd_produto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:maxLength="9"

                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/fragment_consultar_editText_nome_produto"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/quantidade_do_produto"
                android:inputType="number"/>


            <Button
                android:id="@+id/fragment_consultar_button_consultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/fragment_consultar_editText_qntd_produto"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:text="Consultar"
                android:textColor="@color/colorWhiteMax" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/caixa_consulta"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:background="@color/colorWhiteMax">

            <LinearLayout
                android:id="@+id/fragment_consultar_linearlayout_busca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</ScrollView>